[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "pydantic>=2.9.2",
]

[tool.pytest.ini_options]
testpaths = ["app/test"]
pythonpath = [
  "."
]

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
warn_untypes_fields = true

[dependency-groups]
dev = [
    "pyright>=1.1.388",
    "pytest>=8.3.3",
]
